force-app/main/default/objects/Invoice_Line_Mapping__c/Invoice_Line_Mapping__c.object-meta.xml
<CustomObject>
    <label>Invoice Line Mapping</label>
    <nameField>
        <displayFormat>ILM-{000000}</displayFormat>
        <label>Invoice Line Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Line Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>