force-app/main/default/objects/Invoice_Line_Mapping__c/fields/Expense_Line_Value__c.field-meta.xml
<CustomField>
    <fullName>Expense_Line_Value__c</fullName>
    <formula>Payable_Invoice_Expense_Line_Item__r.c2g__NetValue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expense Line Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>