force-app/main/default/objects/Invoice_Line_Mapping__c/fields/Order_Line__c.field-meta.xml
<CustomField>
    <fullName>Order_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Line</label>
    <referenceTo>order_line_POE__c</referenceTo>
    <relationshipLabel>Invoice Line Mapping</relationshipLabel>
    <relationshipName>Invoice_Line_Mapping</relationshipName>
    <type>Lookup</type>
</CustomField>