force-app/main/default/objects/Invoice_Line_Mapping__c/fields/Payable_Invoice_Expense_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Payable_Invoice_Expense_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payable Invoice Expense Line Item</label>
    <referenceTo>c2g__codaPurchaseInvoiceExpenseLineItem__c</referenceTo>
    <relationshipLabel>Invoice Line Mapping</relationshipLabel>
    <relationshipName>Invoice_Line_Mapping</relationshipName>
    <type>Lookup</type>
</CustomField>